--- a/templates/branches.html
+++ b/templates/branches.html
@@ -411,7 +411,7 @@
 
                 <div class="flex flex-wrap justify-center items-center">
                     <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
-                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/joey.png" alt="Sunset in the mountains">
                         <div class="px-6 py-4">
                             <div class="font-bold text-xl mb-2 text-center">Joey Luo</div>
                             <p class="text-gray-700 text-center">
@@ -421,7 +421,7 @@
                     </div>
 
                     <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
-                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/justin.png" alt="Sunset in the mountains">
                         <div class="px-6 py-4">
                             <div class="font-bold text-xl mb-2 text-center">Justin Wang</div>
                             <p class="text-gray-700 text-center">
@@ -431,7 +431,17 @@
                     </div>
 
                     <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
-                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/aaron.png" alt="Sunset in the mountains">
+                        <div class="px-6 py-4">
+                            <div class="font-bold text-xl mb-2 text-center">Aaron Lu</div>
+                            <p class="text-gray-700 text-center">
+                                Canada Branch Helper
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/andy.png" alt="Sunset in the mountains">
                         <div class="px-6 py-4">
                             <div class="font-bold text-xl mb-2 text-center">Andy Huang Song</div>
                             <p class="text-gray-700 text-center">
