--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
                 <p class="mb-6 text-xl text-center">Help us with our mission to teach engineering to the world.</p>
 
                 <div class="flex flex=row justify-center items-center">
-                    <button class="home-button text-sm">Mentors</button>
-                    <button class="home-button text-sm">Mission</button>
-                    <button class="home-button text-sm">Curriculum</button>
+                    <a href="/branches"><button class="home-button text-sm">Mentors</button></a>
+                    <a href="/programs"><button class="home-button text-sm">Mission</button></a>
+                    <a href="/resources"><button class="home-button text-sm">Curriculum</button></a>
                 </div>
             </div>
 
@@ -79,7 +79,7 @@
                         principles you need to pursue your engineering goals.
                     </p>
 
-                    <button class="home-button">More Editorials</button>
+                    <a href="/resources"><button class="home-button">More Editorials</button></a>
                 </div>
             </div>
         </div>
