--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="flex flex-col justify-center items-center w-full mb-10 pb-10" style="background-color: #EDF3F0;">
-            <p class="text-4xl font-bold mt-10">Our Impact.</p>
+            <p class="text-4xl font-bold mt-10" style="overflow-y: hidden;">Our Impact.</p>
             <div class="wrapper my-10">
                 <div class="flex flex-col justify-center items-center container">
                     <i class="fas fa-smile-beam test"></i>
