--- a/templates/branches.html
+++ b/templates/branches.html
@@ -51,7 +51,7 @@
 
                 <div class="flex flex-wrap justify-center items-center">
                     <div class="flex flex-col max-w-sm rounded overflow-hidden shadow-lg mb-10 justify-start items-center mx-10" style="background-color: white;">
-                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/temp.png" alt="Sunset in the mountains">
+                        <img class="w-full justify-center items-center text-center mt-4 rounded px-6 py-4" style="max-width: 15rem;" src="../static/img/people/henry.png" alt="Sunset in the mountains">
                         <div class="px-6 py-4">
                             <div class="font-bold text-xl mb-2 text-center">Henry Zhao</div>
                             <p class="text-gray-700 text-center">
